--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <meta property="og:image" content="images/share.png">
+    <link rel="icon" href="images/share.png">
     <title>Sportowy samochód- każdy może go mieć</title>
     <script defer src="script.js"></script>
     <link href="css/style.css" rel="stylesheet" />
