--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <meta property="og:image" content="images/share.png">
     <link rel="icon" href="images/share.png">
     <title>Sportowy samochód- każdy może go mieć</title>
-    <script defer src="script.js"></script>
+    <script defer src="java/script.js"></script>
     <link href="css/style.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
