--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
     <button class="button">Włącz <span class="themeName">ciemny</span> motyw</button>
     <header>
-      <h1 class="naglowek">Sportowe samochody</h1>
+      <h1 class="naglowek">Sportowe auta</h1>
       <br />
       <img
         class="zdjecie"
